Fixed a lot of margins, spacing, such.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -179,9 +179,15 @@ li.item_for_node {
 	line-height: 20px;
 }
 
+
+
 /* buttons/bars */
+
 .widget {
 	margin-right: 0.5em;
+	
+	height: 1.25em;
+	line-height: 1.25em;
 }
 
 .buttons {
@@ -189,15 +195,18 @@ li.item_for_node {
 	-moz-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.5);
 	-webkit-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.5);
 	
+	margin: -2px;
+	border: 2px solid rgba(0, 0, 0, 0.1);
 	border-radius:			6px;
 	-moz-border-radius:		6px;
 	-webkit-border-radius:	6px;
+	
+	height: 1em;
+	line-height: 1em;
 }
 
 .widget, .buttons {
 	white-space: nowrap;
-	height: 1.25em;
-	line-height: 1.25em;
 }
 
 .widget a, .buttons a { text-decoration: none; }
@@ -367,8 +376,8 @@ ul.scope-list > li.scope-item {
 .edit.note.prop textarea { height: 1em; }
 
 .priority.prop {
-	font-weight: bold;
-	font-size: 0.9em;
+	font-size: 0.75em;
+	line-height: 1em;
 	
 	/*vertical-align: middle;*/
 	position: relative;
@@ -376,7 +385,7 @@ ul.scope-list > li.scope-item {
 	display: inline-block;
 	
 	text-align: center;
-	width: 1.1em; height: 1.1em;
+	width: 1em; height: 1em;
 	color: #fff;
 	background: #000;
 	
@@ -388,11 +397,11 @@ ul.scope-list > li.scope-item {
 	-moz-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.25);
 	-webkit-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.25);
 }
+.priority.prop, .priority.prop input { font-family: 'Arial Black', sans-serif; font-weight: bold; padding: 0; }
+.priority.prop input { font-size: 1em; }
 
 .tag.prop {
-	font-weight: bold;
-	text-transform: uppercase;
-	font-size: 0.8em;
+	font-size: 0.75em;
 	line-height: 1em;
 	
 	display: inline-block;
@@ -409,6 +418,8 @@ ul.scope-list > li.scope-item {
 	-moz-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.25);
 	-webkit-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.25);
 }
+.tag.prop, .tag.prop input { font-weight: bold; text-transform: uppercase; padding: 0; }
+.tag.prop input { font-size: 1em; }
 
 .text.prop {
 }
@@ -432,6 +443,10 @@ ul.scope-list > li.scope-item {
 	box-shadow:			0 2px 12px rgba(0, 0, 0, 0.25);
 	-moz-box-shadow:	0 2px 12px rgba(0, 0, 0, 0.25);
 	-webkit-box-shadow:	0 2px 12px rgba(0, 0, 0, 0.25);
+}
+
+.edit.prop input {
+	height: 1em;
 }
 
 .edit.prop input[type='text'], .edit.prop textarea {
